2014-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (load_linetype):  If a line style is based on a lt < 0
	(LT_NODRAW, LT_BACKGROUND, LT_BLACK, etc), take only the line color.
	FIXME: LT_AXIS should also take the dash pattern but that mechanism
	isn't fully in place yet.
	Bug #1369

	* src/util.c (value_to_str):  Fix error in buffer length accounting.
	Bug #1372

2014-04-03  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.h (error_ex):  Add noreturn attribute to avoid compiler
	warnings.

	* src/fit.c:  Correct test for invalid covariance matrix.

	* src/util.h (int_error, os_error, graph_error):  noreturn attribute
	for MSVC.

	* src/wgdiplus.cpp (drawgraph_gdiplus) src/win/wgraph.c (drawgraph):
	Test if command list is available.

	* src/win.trm (WIN_update_options) src/win/wmenu.c:  Incomplete format
	strings.

2014-04-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c demo/heatmaps.dem docs/gnuplot.doc:
	Document and add a demo for "with image pixels" (formerly "failsafe").

	* src/color.c src/plot3d.c src/pm3d.c src/pm3d.h src/save.c src/set.c
	src/show.c src/tables.c src/tables.h src/term.c src/unset.c:
	Revise "set pm3d hidden3d <lt>" to match other places where you can
	specify line properties.
	- Full syntax is now "set hidden3d {no}border {line-properties}"
	- Individual line properties can be overridden in the plot command
	- Old sytax is accepted as a synonym for "set hidden3d border lc <lt>"

	* demo/transparent_solids.dem docs/gnuplot.doc:
	Update documentation and demo to show new syntax

	* src/contour.c (end_crnt_cntr): Initialize blank label in new contour.

2014-04-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (test_palette_command):  Write the palette colors into
	a datablock $PALETTE rather than writing them as in-line data in a temp
	file.  Simplify the internal command sequence that generates the test
	output.  TODO: Move the command sequence into a datablock as well.
